[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/ui-theme/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/sans/verylarge_reg.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/sans/verylarge_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://scene/infoscreens/RobotStatsScreen.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.905882, 0.905882, 0.905882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.905882, 0.905882, 0.905882, 0.498039 )
border_blend = true
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id=2]

[node name="RobotStatsScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0.113725, 0.0941176, 0.419608, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.04
anchor_right = 0.05
anchor_bottom = 0.04
custom_fonts/font = ExtResource( 3 )
text = "Robot performance"

[node name="Label" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.19
anchor_right = 0.05
anchor_bottom = 0.19
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Assemblies"

[node name="AssembliesFinishedLabel" type="Label" parent="."]
anchor_left = 0.48
anchor_top = 0.19
anchor_right = 0.48
anchor_bottom = 0.19
margin_left = -39.0
margin_bottom = 103.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 2

[node name="Label4" type="Label" parent="."]
anchor_left = 0.52
anchor_top = 0.19
anchor_right = 0.52
anchor_bottom = 0.19
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )
text = "Parts"

[node name="PartsAttachedLabel" type="Label" parent="."]
anchor_left = 0.95
anchor_top = 0.19
anchor_right = 0.95
anchor_bottom = 0.19
margin_left = -39.0
margin_bottom = 103.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 3 )
text = "12"
align = 2

[node name="Label2" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.37
anchor_right = 0.05
anchor_bottom = 0.37
margin_right = 643.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 2 )
text = "Last assembly quality grade"

[node name="LastAssemblyQualityBar" type="ProgressBar" parent="."]
anchor_left = 0.05
anchor_top = 0.52
anchor_right = 0.95
anchor_bottom = 0.64
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="Label3" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.65
anchor_right = 0.05
anchor_bottom = 0.65
margin_right = 643.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 2 )
text = "Overall quality assessment"

[node name="OverallQualityBar" type="ProgressBar" parent="."]
anchor_left = 0.05
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 0.92
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false
